Enable PasswordManagerBrowserTestBase.UsernameChanged

BUG=616627

Review-Url: https://codereview.chromium.org/2913193002
Cr-Commit-Position: refs/heads/master@{#476252}

Former-commit-id: 03f4a0e3d173271a756cf70d28303b8917096ade