chrome/browser/password_manager/password_manager_test_base.h
@@ -137,6 +137,10 @@ class PasswordManagerBrowserTestBase : public InProcessBrowserTest {
   // waits until the "change" event is fired for the element. This also
   // guarantees that once the real value matches the expected, the JavaScript
   // event loop is spun to allow all other possible events to take place.
+  // WARNING:
+  // - the function waits only for the first "onchange" event.
+  // - "onchange" event is triggered by autofill. However, if user's typing is
+  // simulated then the event is triggered only when control looses focus.
   void WaitForElementValue(const std::string& element_id,
                            const std::string& expected_value);
   // Same as above except the element |element_id| is in iframe |iframe_id|
